加入(部分)评论功能

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -202,6 +202,8 @@ zh-CN:
       user: 用户
       article: 文章
       category: 目录
+      comment: 评论
+      sub_comment: 子评论
     attributes:
       user:
         nickname: 昵称
@@ -210,3 +212,7 @@ zh-CN:
         title: 标题
         content: 内容
         source: 来源
+      comment:
+        content: 内容
+      sub_comment:
+        content: 内容
