--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -233,3 +233,7 @@ zh-CN:
           other: "Displaying <b>all %{count}</b> %{entry_name}"
       more_pages:
         display_entries: "Displaying %{entry_name} <b>%{first}&nbsp;-&nbsp;%{last}</b> of <b>%{total}</b> in total"
+  articles: "文章"
+  features: "专题"
+  categories: "目录"
+  users: "用户"
