--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -207,7 +207,7 @@ zh-CN:
     attributes:
       user:
         nickname: 昵称
-        sinature: 签名
+        avatar: 头像
       article:
         title: 标题
         content: 内容
