--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -208,6 +208,8 @@ zh-CN:
     attributes:
       feature:
         poster: 海报
+        title: 标题
+        content: 专题说明
       user:
         nickname: 昵称
         avatar: 头像
@@ -215,7 +217,7 @@ zh-CN:
         title: 标题
         content: 内容
         source: 来源
-        category: 目录
+        category_id: 目录
       comment:
         content: 内容
       sub_comment:
