--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -99,7 +99,7 @@ zh-CN:
     format: ! '%{attribute} %{message}'
     messages:
       accepted: 必须是可被接受的
-      blank: 不能为空字符
+      blank: 不能为空
       confirmation: 与确认值不匹配
       empty: 不能留空
       equal_to: 必须等于 %{count}
@@ -218,6 +218,7 @@ zh-CN:
         content: 内容
         source: 来源
         category_id: 目录
+        category: 目录
       comment:
         content: 内容
       sub_comment:
